tests/samples/negative/resources/move_use_after_branch.ax
module move_use_after_branch;

fn maybe_move[T](value: T, flag: bool) -> T {
    if flag {
        let consumed: T = value;
    }
    return value;
}

fn main() -> i32 {
    return 0;
}
